--- a/backend/user-service/src/main/resources/application.properties
+++ b/backend/user-service/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 logging.level.org.springframework.security=DEBUG
 
 spring.profiles.active=local
+jwt.secret=${JWT_SECRET}
+jwt.expiration=3600000
